# OpenZz

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  build.bat  build.sh  config.h.in  configure  configure.in  openzz.spec  test.sh
doc/: Makefile.am  Makefile.in  zzdoc.html  zzsigpl.ps
doc/src/: Makefile.am  Makefile.in  README  zzdoc.xml  zzdoc_appendix.xml  zzdoc_dynamiclibs.xml  zzdoc_glossary.xml  zzdoc_intro.xml  zzdoc_preface.xml  zzdoc_refguide.xml  zzdoc_semanticinterface.xml  zzdoc_tour.xml
src/: Makefile.am  Makefile.in  action.c  avl.c  avl.h  defopen.c  dumpnet.c  err.c  err.h  interface.c  kernel.c  kernel.h  lazy.c  list.c  list.h  mem.h  param.c  param.h  parse.c  printz.c  printz.h  rule.c  rule.h  scope.c  source.c  source.h  sys.c  sys.h  table.c  table.h  trace.h  util.c  zkernel.c  zlex.c  zlex.h  zsys.c  zz.c  zz.h  zzbind.h  zzi.c
testsuite/: Makefile.am  Makefile.in  boolean.zz  deref_param.zz.SKIPPED  double.zz  foreach.zz  integer.zz  list_in_cond.zz  listmerge.zz  listsplit.zz  looptest_do.zz  looptest_while.zz  numerictypes.zz  popvoidrule.zz  setcase.zz  setparseeol.zz  setparseeol2.zz  tagdtor.c  tagdtor.zz.SKIPPED  utilities.zz  when_del_scope.zz  zz_test.sh
